chore: Remove unnecessary whitespace and fix smiId property in ecosolution-search.request.model.ts

--- a/goeko/apps/goeko/src/app/home/header/menu/menu.component.scss
+++ b/goeko/apps/goeko/src/app/home/header/menu/menu.component.scss
@@ -35,20 +35,17 @@ $lineColor: var(--primary--100);
     padding: 0.5rem;
     transition: all 0.3s;
   }
-
 }
 
-
 .menu-item:hover:has(.submenu:not(:empty)) {
- .menu-item--link {
-  background: var(--primary--400);
-  color: var(--primary--50);
-  border-radius: 0.5rem;
- }
+  .menu-item--link {
+    background: var(--primary--400);
+    color: var(--primary--50);
+    border-radius: 0.5rem;
+  }
 }
 
 .submenu {
-  display: none;
   position: fixed;
   left: 0;
   right: 0;
@@ -77,7 +74,6 @@ $lineColor: var(--primary--100);
   &-element {
     font: var(--font-default);
     color: var(--soft-dark);
-
   }
 }
 .menu-item:hover .submenu:not(:empty) {
@@ -91,7 +87,6 @@ $lineColor: var(--primary--100);
   top: -21px;
   opacity: 0.7;
 }
-
 
 @media (max-width: 768px) {
   .menu {
